corrijir join em rsql